--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^5.3.1",
-    "fast-csv": "^4.3.6",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.18.0",
+    "swagger-jsdoc": "^6.2.0",
+    "swagger-ui-express": "^4.3.0",
     "xlsx2json": "^1.0.0"
   },
   "devDependencies": {
