--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express-validator": "^5.3.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
