--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
+    "dev": "nodemon ./app.ts",
+    "start": "node dist/app.js",
     "db-seed": "sequelize db:seed:all",
     "db-migrate": "sequelize db:migrate",
     "db-migrate-undoAll": "sequelize db:migrate:undo:all",
@@ -34,6 +35,7 @@
     "sequelize": "^6.18.0",
     "swagger-jsdoc": "^6.2.0",
     "swagger-ui-express": "^4.3.0",
+    "ts-node": "^10.7.0",
     "xlsx2json": "^1.0.0"
   },
   "devDependencies": {
